--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBoV1uEQXCMjHiddY0xowNhPBCWQG4GOhw</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        fsdfsdfsdfsgsdgdfbdfdferg</string>
 </resources>
